--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,41 @@
     transform: rotate(360deg);
   }
 }
+
+.circle {
+  float: left;
+  border-radius: 50%;
+  background-color: antiquewhite;
+  padding: 40px;
+  margin: 30px;
+}
+.kv {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 77px;
+  height: 77px;
+  background-color: crimson;
+  margin: 7px;
+  border-radius: 7px;
+}
+.kvc {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+button {
+  display: inline-block;
+  padding: 0.75rem 1.25rem;
+  border-radius: 10rem;
+  color: #fff;
+  background-color: #fbca61;
+  text-transform: uppercase;
+  font-size: 1rem;
+  letter-spacing: 0.15rem;
+  border: none;
+  cursor: pointer;
+  margin: 6px;
+}
